added more content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ive had for around three years. </p>
 </tr>
 
 </table>
-<h2> new table</h2>   
+<h2> Information</h2>   
      <form action="">
 <style class="css"></style>
         <table>
@@ -67,8 +67,10 @@ ive had for around three years. </p>
 </form> 
 </tr>
 <input type="submit" value="Submit">
-
+<img src="" alt="">
         </table>
+        <iframe src="https://3dwarehouse.sketchup.com/embed/4ce585ca-5326-482d-a189-6897e1cf2c46?token=Ffpf77teeGY=&binaryName=s21" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+
     </center>
 </body>
 </html>
